Fixed active tab slider not showing outside of sample box.

--- a/src/scenes/App/App.scss
+++ b/src/scenes/App/App.scss
@@ -110,7 +110,7 @@
         }
 
         li {
-          grid-template-columns: 10rem 1fr 7rem !important;
+          grid-template-columns: 10rem 1fr 7rem;
         }
       }
     }
